updated_webhook_manifests.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: inferenceservice.serving.kserve.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/mutate-serving-kserve-io-v1beta1-inferenceservice
    failurePolicy: Fail
    name: inferenceservice.kserve-webhook-server.defaulter
    rules:
      - apiGroups:
          - serving.kserve.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - inferenceservices
    sideEffects: None
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/mutate-pods
    failurePolicy: Fail
    name: inferenceservice.kserve-webhook-server.pod-mutator
    namespaceSelector:
      matchExpressions:
        - key: control-plane
          operator: DoesNotExist
    objectSelector:
      matchExpressions:
        - key: serving.kserve.io/inferenceservice
          operator: Exists
    reinvocationPolicy: IfNeeded
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: clusterservingruntime.serving.kserve.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/validate-serving-kserve-io-v1alpha1-clusterservingruntime
    failurePolicy: Fail
    name: clusterservingruntime.kserve-webhook-server.validator
    rules:
      - apiGroups:
          - serving.kserve.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - clusterservingruntimes
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: inferencegraph.serving.kserve.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/validate-serving-kserve-io-v1alpha1-inferencegraph
    failurePolicy: Fail
    name: inferencegraph.kserve-webhook-server.validator
    rules:
      - apiGroups:
          - serving.kserve.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - inferencegraphs
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: inferenceservice.serving.kserve.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/validate-serving-kserve-io-v1beta1-inferenceservice
    failurePolicy: Fail
    name: inferenceservice.kserve-webhook-server.validator
    rules:
      - apiGroups:
          - serving.kserve.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - inferenceservices
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: llminferenceservice.serving.kserve.io
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/validate-serving-kserve-io-v1alpha1-llminferenceservice
    failurePolicy: Fail
    name: llminferenceservice.kserve-webhook-server.validator
    rules:
      - apiGroups:
          - serving.kserve.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - llminferenceservices
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: llminferenceserviceconfig.serving.kserve.io
webhooks:
  - admissionReviewVersions:
      - v1
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/validate-serving-kserve-io-v1alpha1-llminferenceserviceconfig
    failurePolicy: Fail
    name: llminferenceserviceconfig.kserve-webhook-server.validator
    rules:
      - apiGroups:
          - serving.kserve.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - llminferenceserviceconfigs
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: localmodelcache.serving.kserve.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/validate-serving-kserve-io-v1alpha1-localmodelcache
    failurePolicy: Fail
    name: localmodelcache.kserve-webhook-server.validator
    rules:
      - apiGroups:
          - serving.kserve.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - localmodelcaches
    sideEffects: None
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: servingruntime.serving.kserve.io
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      url: https://internal-similarly-cockatoo.ngrok-free.app/validate-serving-kserve-io-v1alpha1-servingruntime
    failurePolicy: Fail
    name: servingruntime.kserve-webhook-server.validator
    rules:
      - apiGroups:
          - serving.kserve.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
        resources:
          - servingruntimes
    sideEffects: None
